--- a/seng438-a1-20.md
+++ b/seng438-a1-20.md
@@ -36,7 +36,7 @@ Our exploratory testing was broken into two pairs as was asked.
 
 The first pair (Arushi and Seniru) broke their exploratory testing into two main phases. First, Arushi created and executed some tests to see if there was anything that was obviously and fundamentally wrong with the program. This was done in a completely random fashion, testing as many aspects as possible with the program. When bugs were discovered, Seniru put them into the Jira testing software, and this process was continued for some period of time. After this, the process became a lot more methodical, with Seniru testing the withdrawal and balance inquiry features of the application, and Arushi testing the deposit and transfer functional requirements. The most important aspects of this was making sure that when each of these functions were triggered, that the balance remained accurate (for available and total) and additional money was not taken from the account nor was extra money added. To get to each of these stages for the two of them, firstly the credit card number and the pin numbers were checked, using a correct and wrong number to make sure wrong access was not granted and that when the right numbers were inputted the account was accessed. Regarding withdrawal, deposit, and transfer various figures were tested to make sure the right amount was added or reduced from the account, whereas with the balance inquiry the various options were just triggered. Testing out all of these allowed us to not only test the functionality of the overall user functional requirements in the application, but also things like button functionality as well.  
 
-The second pair (Rian and Tanish) started off by creating a high-level plan for which sections of the program to test, like withdrawals and so forth, and from there specified common program errors to test; for example, withdrawing more money than what was in your account. We then followed this plan methodically to test all sections highlighted in the plan, and delved deeper on some tests, like withdrawing money, when encountering the bug where the withdrawal amount on the screen did not match the amount dispensed by the machine. Overall the idea was to follow the plan loosely and to experiment and dig into certain functionalities more when something went awry. This was mostly done in the spirit of how the user would use the program, and since the user always finds bugs the team never noticed, we decided that this would increase our chances of finding odd or tricky defects that would normally go unnoticed until the program hit production.
+The second pair (Rian and Tanish) started off by creating a high-level plan for which sections of the program to test, like withdrawals and so forth, and from there specified common program errors to test, like withdrawing more money that was in your account. We then followed this plan methodically to test all sections highlighted in the plan, and delved deeper on some tests like withdrawing money, when encountering the bug of the withdrawal amount on the screen not matching the amount dispensed by the machine. The main purpose for creating a testing plan for our exploratory was more to do with keeping organized and to keep track of where we were through the system. The reason this was done was because there was a lot of functionality throughout the program, and by creating the plan, we ensured that each component was visited and no functionality was tested again. By following this plan, we were initially able to find 11 bugs in the system. After exploratory testing, we moved on to the MFT, where we quickly realized that the structure was not much different from what we layed out during the exploratory testing. The only difference was that the MFT had much more details for each of the functionality such as testing invalid pin after first attempt, second attempt and so forth. 
 
 # Comparison of exploratory and manual functional testing <a name="comp"></a>
 
